# MathRobo

./: .gitignore  README.md  pyproject.toml  requirements.txt
ei_vo/: __init__.py
ei_vo/render/: __init__.py
example/: benchmark_cmtm_timing.py
examples/: __init__.py  demo_mj.py
mathrobo/: __init__.py
mathrobo/basic/: __init__.py  basic.py  cm_vec.py  factorial_vec.py
mathrobo/calculus/: __init__.py  bspline.py  integral.py  numerical_grad.py
mathrobo/difference/: __init__.py  numerical_grad.py
mathrobo/integral/: __init__.py
mathrobo/lie/: cmtm_abst.py  lie_abst.py  se3.py  so2.py  so3.py
mathrobo/transformation/: rotation.py
tests/basic/: test_factorial_vec.py
tests/calculus/: test_bspline.py  test_build_integrator.py  test_numerical_grad.py
tests/integral/: test_build_integrator.py
tests/lie/: test_cmtm_se3.py  test_cmtm_so3.py  test_jax_consistency.py  test_se3.py  test_se3_sym.py  test_so2.py  test_so3.py  test_so3_jax.py  test_so3_jax_grad.py  test_so3_sym.py
