[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mathrobo"
version = "0.0.2"
authors = [  
  { name="taiki-ishigaki", email="taiki000ishigaki@gmail.com" },
]
description = "basic mathematical library for robotics reserach"
readme = "README.md"

license = {text = "MIT License"}
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
    "jax>=0.4.30",
    "numpy>=2.0.2",
    "pytest>=8.4.2",
    "scipy>=1.13.1",
    "sympy>=1.14.0",
]

[project.urls]
Homepage = "https://github.com/MathRobotics/MathRobo"
